manifests/minio-routel.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
  namespace: dspa
spec:
  to:
    kind: Service
    name: minio-sample
  port:
    targetPort: http
  wildcardPolicy: None
